unpackaged/main/default/objects/loan__Investor_Loan__c/loan__Investor_Loan__c.object-meta.xml
<CustomObject>
    <description>This is a conjunction object to keep many to many relationships for loans and accounts (Investor)</description>
    <label>Investment Order</label>
    <nameField>
        <displayFormat>ILID-{0000000000}</displayFormat>
        <label>Investor Loan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>