unpackaged/main/default/objects/loan__Investor_Loan__c/fields/Auto_Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Sale_Date__c</fullName>
    <formula>loan__Account__r.Number_of_Days__c + loan__Investor_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Sale Date</label>
    <type>Date</type>
</CustomField>