unpackaged/main/default/objects/loan__Investor_Loan__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Buyer's Account - To whom IOs will be sold after a certain point of time.</description>
    <inlineHelpText>Buyer's Account - To whom IOs will be sold after a certain point of time.</inlineHelpText>
    <label>Buyer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.loan__Investor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Investment Orders (Buyer)</relationshipLabel>
    <relationshipName>Investment_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>