unpackaged/main/default/objects/loan__Investor_Loan__c/fields/Is_Funding_Partner__c.field-meta.xml
<CustomField>
    <fullName>Is_Funding_Partner__c</fullName>
    <formula>loan__Account__r.Is_Funding_Partner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Funding Partner</label>
    <type>Checkbox</type>
</CustomField>