unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will be look up from Account</description>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only investors should be selected.</errorMessage>
        <filterItems>
            <field>Account.loan__Investor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Investment Orders</relationshipLabel>
    <relationshipName>Investors_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>