unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Amortization_Schedule_Generation_time__c.field-meta.xml
<CustomField>
    <fullName>loan__Amortization_Schedule_Generation_time__c</fullName>
    <label>Amortization Schedule Generation time</label>
    <type>DateTime</type>
</CustomField>