unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Buying_Price__c.field-meta.xml
<CustomField>
    <fullName>loan__Buying_Price__c</fullName>
    <description>Amount paid by Investor for purchasing this IO</description>
    <label>Buying Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>