unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Certificate_Rate__c.field-meta.xml
<CustomField>
    <fullName>loan__Certificate_Rate__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>The certificate rate for this investment. This is the rate which will be payable to the investor who buys invested in this loan and is entitled to its receivable stream.</description>
    <inlineHelpText>This is the rate of Interest earned by the investor.</inlineHelpText>
    <label>Certificate Rate</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>