unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Charged_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Charged_Off_Date__c</fullName>
    <description>Datetime when IO is written off.</description>
    <label>Charged Off Date</label>
    <type>Date</type>
</CustomField>