unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Charged_Off_Fees__c.field-meta.xml
<CustomField>
    <fullName>loan__Charged_Off_Fees__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Due fee will be stored in this field when IO is written off.</description>
    <inlineHelpText>If the loan is not repaid and the concerned Financial Institution decides to write off or charge off the loan, the snapshot of Fee is stored here.</inlineHelpText>
    <label>Charged Off Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>