unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Charged_Off_Interest__c.field-meta.xml
<CustomField>
    <fullName>loan__Charged_Off_Interest__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Accrued Interest will go into Charged Off Interest</description>
    <inlineHelpText>If the loan is not repaid and the concerned Financial Institution decides to write off or charge off the loan, the snapshot of Interest is stored here.</inlineHelpText>
    <label>Charged Off Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>