unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Charged_Off_Principal__c.field-meta.xml
<CustomField>
    <fullName>loan__Charged_Off_Principal__c</fullName>
    <defaultValue>0</defaultValue>
    <description>When IO is written off Remaining Investment Amount goes into this.</description>
    <inlineHelpText>If the loan is not repaid and the concerned Financial Institution decides to write off or charge off the loan, the snapshot of Principal is stored here.</inlineHelpText>
    <label>Charged Off Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>