unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Collect_Service_Fees_On__c.field-meta.xml
<CustomField>
    <fullName>loan__Collect_Service_Fees_On__c</fullName>
    <description>Service Fee Strategy on Investment Order.</description>
    <inlineHelpText>Select the components of investor payments on which service fees is to be charged. Default value is taken from Investor Account's "Collect Service Fees On" field. If "No Fees" is selected, no service fee will be calculated on investor payments.</inlineHelpText>
    <label>Collect Service Fees On</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Fees</fullName>
            </value>
            <value>
                <fullName>No Fees</fullName>
            </value>
            <value>
                <fullName>Principal Remaining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>