unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>loan__Discount_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Percentage of discount offered on Investment order</description>
    <label>Discount Percent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>