unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Enabled_Flag__c.field-meta.xml
<CustomField>
    <fullName>loan__Enabled_Flag__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Shows if the record is enabled.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>