unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Generate_Amortization_Schedule__c.field-meta.xml
<CustomField>
    <fullName>loan__Generate_Amortization_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Amortization Schedule</label>
    <type>Checkbox</type>
</CustomField>