unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Interest_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Amount_Paid__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Total Interest Amount paid on this investment.</description>
    <label>Interest Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>