unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Interest_Exempted_From_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Exempted_From_Service_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Interest Amount that should not be considered for Service Fee calculations</description>
    <inlineHelpText>This interest amount will not be considered for Service Fee calculations</inlineHelpText>
    <label>Interest Exempted From Service Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>