unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Interest_Rate_On_Due_Principal__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Rate_On_Due_Principal__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Interest rate on due principal to calculate interest amount on due principal which needs to be paid to investor</description>
    <inlineHelpText>Interest rate on due principal to calculate interest amount on due principal which needs to be paid to investor</inlineHelpText>
    <label>Interest Rate On Due Principal</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>