unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Interest_Rate_On_Loan_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Rate_On_Loan_Account__c</fullName>
    <description>Interest Rate On Loan account</description>
    <label>Interest Rate On Loan</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>