unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Interest_Reinvested__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Reinvested__c</fullName>
    <label>Interest Reinvested No Service</label>
    <summarizedField>loan__Investor_Loan_Account_Txns__c.loan__Interest_Paid__c</summarizedField>
    <summaryFilterItems>
        <field>loan__Investor_Loan_Account_Txns__c.loan__Reinvest_Interest__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>loan__Investor_Loan_Account_Txns__c.loan__Txn_Code__c</field>
        <operation>equals</operation>
        <value>INTEREST REINVESTED, PRINCIPAL &amp; INTEREST REINVESTED</value>
    </summaryFilterItems>
    <summaryForeignKey>loan__Investor_Loan_Account_Txns__c.loan__Investor_Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>