unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Inv_Accrued_Interest_Amt__c.field-meta.xml
<CustomField>
    <fullName>loan__Inv_Accrued_Interest_Amt__c</fullName>
    <description>Payable Accrued Interest amount to investor</description>
    <inlineHelpText>This is the accrued Interest amount payable to the investor</inlineHelpText>
    <label>Accrued Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>