unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Inv_Interest_Posted_Amt__c.field-meta.xml
<CustomField>
    <fullName>loan__Inv_Interest_Posted_Amt__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Total Interest Posted on account, this will be updated when the payment amount is being calculated.</description>
    <label>Interest Posted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>