unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Inv_IOA_Accrued__c.field-meta.xml
<CustomField>
    <fullName>loan__Inv_IOA_Accrued__c</fullName>
    <description>Total interest on arrears accrued for investor including IOA on principal, IOA on interest and IOA on IOA</description>
    <inlineHelpText>Total interest on arrears accrued for investor including IOA on principal, IOA on interest and IOA on IOA</inlineHelpText>
    <label>IOA Accrued</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>