unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Inv_IOA_Posted_Amt__c.field-meta.xml
<CustomField>
    <fullName>loan__Inv_IOA_Posted_Amt__c</fullName>
    <description>Total IOA Posted on investment Order till today</description>
    <inlineHelpText>Total IOA Posted on investment Order till today</inlineHelpText>
    <label>IOA Posted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>