unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Inv_Last_Interest_Accrual_Post_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Inv_Last_Interest_Accrual_Post_Date__c</fullName>
    <description>Last Interest accrual Posted</description>
    <label>Last Interest Accrual Date</label>
    <type>Date</type>
</CustomField>