unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Investment_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Investment_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Investment Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>