unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Investor_Amortization_Schedule_Generated__c.field-meta.xml
<CustomField>
    <fullName>loan__Investor_Amortization_Schedule_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks whether the AMZ schedule generated or not for a given IO</description>
    <label>Investor Amortization Schedule Generated</label>
    <type>Checkbox</type>
</CustomField>