unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Investor_End_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Investor_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>