unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Investor_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Investor_Start_Date__c</fullName>
    <description>Start date of the Investor</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>