unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__IOA_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>loan__IOA_Amount_Paid__c</fullName>
    <description>Total IOA amount paid to investor till now</description>
    <inlineHelpText>Total IOA amount paid to investor till now</inlineHelpText>
    <label>IOA Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>