unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Loan__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a look up value from Loan</description>
    <label>Loan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>loan__Loan_Account__c.loan__Loan_Status__c</field>
            <operation>notContain</operation>
            <value>Pending Approval, Approved, Canceled, Partial Application</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>loan__Loan_Account__c</referenceTo>
    <relationshipLabel>Investment Orders</relationshipLabel>
    <relationshipName>Investors_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>