unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Loan_Delinquent_Days__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Delinquent_Days__c</fullName>
    <description>Number_of_Days_Overdue__c on loan account</description>
    <label>Created Loan Delinquent Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>