unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Loan_Principal_Remaining__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Principal_Remaining__c</fullName>
    <label>Created Loan Principal Remaining</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>