unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Status__c</fullName>
    <description>Loan_Status__c on loan account</description>
    <label>Created Loan Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>