unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Minimum_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>loan__Minimum_Service_Fee__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Minimum Service Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>