unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Principal_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>loan__Principal_Amount_Paid__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Total Principal Amount Paid back to Investor.</description>
    <label>Principal Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>