unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Rebate_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>loan__Rebate_Amount_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This is the total rebate paid to the investor in case of a Protect enabled contract.</inlineHelpText>
    <label>Rebate Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>