unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Reinvest_Interest__c.field-meta.xml
<CustomField>
    <fullName>loan__Reinvest_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Interest should be reinvested or not when Investor Payout is done.</description>
    <label>Reinvest Interest</label>
    <type>Checkbox</type>
</CustomField>