unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Reinvest_Principal__c.field-meta.xml
<CustomField>
    <fullName>loan__Reinvest_Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if principal should be reinvested or not when Investor payout is done.</description>
    <label>Reinvest Principal</label>
    <type>Checkbox</type>
</CustomField>