unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Remaining_Investment_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Remaining_Investment_Amount__c</fullName>
    <description>shows remaining investment amount for investment order.</description>
    <formula>loan__Investment_Amount__c -  loan__Principal_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Investment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>