unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Service_Charge_On_Full_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Service_Charge_On_Full_Payment_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Charge On Full Payment Amount</label>
    <type>Checkbox</type>
</CustomField>