unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Service_Rate__c.field-meta.xml
<CustomField>
    <fullName>loan__Service_Rate__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>On this rate service charge will be charged to the investors for servicing loans, making note payments and maintaining the accounts.
The service charge paid by investors is on all amounts paid by the borrowers.</description>
    <inlineHelpText>Is the %age of the certificate rate which is earned by the P2P platform.</inlineHelpText>
    <label>Interest Service Rate</label>
    <precision>7</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>