unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Share__c.field-meta.xml
<CustomField>
    <fullName>loan__Share__c</fullName>
    <description>Describes the percent share of Investor in Loan amount</description>
    <label>Share</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Percent</type>
</CustomField>