unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Status__c.field-meta.xml
<CustomField>
    <fullName>loan__Status__c</fullName>
    <description>Describes whether the record is in Active or Inactive state</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Closed - Written Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>