unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>loan__Total_Amount_Paid__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Total Amount paid back to Investor</description>
    <label>Total Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>