unpackaged/main/default/objects/loan__Investor_Loan__c/fields/loan__Write_Off_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Write_Off_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Amount which is written off for investment order.</description>
    <inlineHelpText>Amount to write off from Investment order.</inlineHelpText>
    <label>Write Off Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>