unpackaged/main/default/objects/loan__Investor_Loan__c/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <inlineHelpText>Number of days after which IO will be sold automatically.</inlineHelpText>
    <label>Number of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>