unpackaged/main/default/objects/loan__Investor_Loan__c/fields/peer__Number_of_Shares__c.field-meta.xml
<CustomField>
    <fullName>peer__Number_of_Shares__c</fullName>
    <formula>loan__Investment_Amount__c  /  loan__Loan__r.peer__Note_Type__r.peer__Denomination__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Shares</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>