unpackaged/main/default/objects/loan__Investor_Loan__c/validationRules/loan__Available_Funds_check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Available_Funds_check</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; loan__Investment_Amount__c &gt; loan__Account__r.loan__Undeployed_Funds__c</errorConditionFormula>
    <errorMessage>Investor can not invest more than Available Funds.</errorMessage>
</ValidationRule>