unpackaged/main/default/objects/loan__Investor_Loan__c/validationRules/loan__Investment_amount_should_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Investment_amount_should_be_positive</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISNULL(loan__Investment_Amount__c),  ISBLANK(loan__Investment_Amount__c), loan__Investment_Amount__c &lt;= 0)</errorConditionFormula>
    <errorMessage>The investment amount must be greater than zero.</errorMessage>
</ValidationRule>